--- a/README
+++ b/README
@@ -2,3 +2,6 @@ Garden Dating Project
 =====================
 
 An app/site to match gardners with gardens in Austin, TX
+
+List of current gardens
+Maps of current gardens
