Added all contributors

--- a/README
+++ b/README
@@ -8,5 +8,16 @@ List of current gardens
 Maps of current gardens
 
 Contributors:
-Joe Marty
+Nathan Wilkes nwilkes@gmail.com
+Matt Hannon matt@happinessdigital.com
+Stephen Watters stephen.watters@gmail.com
+Andrew Magill andrewbmagill@yahoo.com
+David Walker david@conjunctured.com
+Bishop Zareh eduatx@gmail.com
+Nate McGuire nate.mcguire@gmail.com
+Jacob Silva questforall@gmail.com
+Devin Price (contact me if you need more help with the map downstairsdev@yahoo.com / @devinsays)
+Joe Marty josephmarty@gmail.com
+Joe Merante joe@codeforamerica.org
+Vaskin Kissoyan vaskin@gmail.com
 
